--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ djangorestframework
 git+git://github.com/devmmaia/django-zora-messages#egg=django-zora-messages
 coverage
 flake8==3.8.3
+gunicorn==19.9.0
+whitenoise==4.1.2
+dj-database-url==0.5.0
