--- a/app.json
+++ b/app.json
@@ -2,8 +2,7 @@
     "environments": {
       "test": {
         "scripts": {
-          "test":  "python manage.py test",
-          "deploy": "docker run"
+          "test":  "python manage.py test"
            
            
         }
