Adding 'release scripts' to manifest

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,10 @@
 build:
     docker:
         web: Dockerfile
+
+release:
+    - python manage.py makemigrations
+    - python manage.py migrate
 run:
     web: gunicorn sogeo.wsgi:application --bind 0.0.0.0:$PORT
+
