--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Django>=2.0,<3.0
+Django==3
 psycopg2-binary>=2.8
 djangorestframework
 git+git://github.com/devmmaia/django-zora-messages#egg=django-zora-messages
-coverage
-flake8==3.8.3
-gunicorn==19.9.0
-whitenoise==4.1.2
+coverage==5.2
+flake8
+gunicorn
+whitenoise==5.1
 dj-database-url==0.5.0
 django-heroku
