--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "environments": {
       "test": {
         "scripts": {
-          "test":  "python manage.py test"
+          "test":  "bash scripts/test.sh"
 
         }
       }
